Changing link color to secondary color; fixing header alignments.

--- a/media/css/landing.css
+++ b/media/css/landing.css
@@ -13,7 +13,7 @@ line-height: 1.5;
 }
 
 #header {
-  padding: 15px 35px 0 15px;
+  padding: 15px 35px 0 0;
 }
 
 #tag_page {
