--- a/media/scss/style-newui.scss
+++ b/media/scss/style-newui.scss
@@ -1146,17 +1146,17 @@ table.vert-center td {
 }
   
 /* */
+
+input {
+    outline: none;
+}
   
 input[type=submit], input[type=button] {
-    border: 1px outset #53595F;
-    background-color: #016797;
+    border: 0 none;
+    background-color: $primaryColor;
     color: $white;
     cursor: pointer;
-    padding: 2px;
-    /* NOTE: This causes IE7 to truncate button widths */
-    /*min-width: 40px;
-    width: auto;*/
-    @include default-border-radius;
+    padding: 5px 10px;
     &:hover {
         background-color: $linkColor-hover;
     }
@@ -2284,39 +2284,43 @@ header {
    width: 85%;
    margin: 0 auto;
    position: relative;
-   #header {
-       height: 85px;
-       text-align: left;
-       position: relative;
-       padding-top: 15px;
-   }
-   #header-links {
-       float: right;
-       position: absolute;
-       white-space: nowrap;
-       right: 41px;
-       top: 10px;
-   }
-   #header-logo {
-      float: left;
-      margin-top: 2px;
-      margin-left: 15px;
-   }
-   #totalTagLink {
-       display: inline-block;
-       margin-top: 36px;
-       margin-left: 15px;
-       color: #222;
-       vertical-align: top;
-       text-decoration: underline;
-   }
-  
-   #header-logo img {
-       float: left;
-       position: relative;
-       top: 5px;
-       left: 0px;
-   }
+}
+
+#header {
+   height: 85px;
+   text-align: left;
+   position: relative;
+   padding-top: 15px;
+}
+#totalTagLink {
+   display: inline-block;
+   margin-top: 36px;
+   margin-left: 15px;
+   color: #222;
+   vertical-align: top;
+   text-decoration: underline;
+}
+
+#header-logo img {
+   float: left;
+   position: relative;
+   top: 5px;
+   left: 0px;
+}
+
+#header-logo {
+  float: left;
+  margin-left: 15px;
+  a {
+    float: left;
+  }
+}
+
+#header-links {
+   position: absolute;
+   white-space: nowrap;
+   right: 41px;
+   top: 10px;
 }
 
 #corner-notch {
@@ -2458,7 +2462,7 @@ td.machine-generated-column {
 #countLink {
     float: right;
     font-weight: bold;
-    margin-right: 33px;
+    margin-right: 30px;
     text-decoration: underline;   
 }
   
